Modified CSS to ensure disabled buttons arent too wide

--- a/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/tiles.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/DashboardStyles/layouts/tiles.css
@@ -544,6 +544,7 @@ div.officetab li div.button
 div.officetab li div.button .disabled {
 	color: gray!important;
 	cursor: default;
+	width: 49px;
 }
 
 .officebar li { list-style: none;}
